--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -242,8 +242,7 @@ input[type="submit"] {
   background-size: cover;
   color: #ffffff;
   width: 100vw;
-  height: 90vh;
-  min-height: 100%; }
+  height: 90vh; }
   .header-homepage h1, .header-homepage h2, .header-homepage h3 {
     clear: both;
     margin: 0.75em; }
