--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -4,6 +4,8 @@
   color: $snow;
   width: 100vw;
   height: 90vh;
+  overflow:hidden;
+-webkit-overflow-scrolling:touch;
 
   h1, h2, h3 {
     clear: both;
@@ -163,7 +165,8 @@
   background-size: cover;
   color: $snow;
   width: 100vw;
-  min-height: 100%;
+  overflow:hidden;
+-webkit-overflow-scrolling:touch;
 }
 
 .bg-image2 {
@@ -171,5 +174,6 @@
   background-size: cover;
   color: $snow;
   width: 100vw;
-  min-height: 100%;
+  overflow:hidden;
+-webkit-overflow-scrolling:touch;
 }
