--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -242,9 +242,7 @@ input[type="submit"] {
   background-size: cover;
   color: #ffffff;
   width: 100vw;
-  height: 90vh;
-  overflow: hidden;
-  -webkit-overflow-scrolling: touch; }
+  height: 90vh; }
   .header-homepage h1, .header-homepage h2, .header-homepage h3 {
     clear: both;
     margin: 0.75em; }
@@ -355,17 +353,13 @@ input[type="submit"] {
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../images/bg-image3.jpg") center center fixed no-repeat;
   background-size: cover;
   color: #ffffff;
-  width: 100vw;
-  overflow: hidden;
-  -webkit-overflow-scrolling: touch; }
+  width: 100vw; }
 
 .bg-image2 {
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url("../images/bg-image2.jpg") center center fixed no-repeat;
   background-size: cover;
   color: #ffffff;
-  width: 100vw;
-  overflow: hidden;
-  -webkit-overflow-scrolling: touch; }
+  width: 100vw; }
 
 footer {
   background-color: #444;
