--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -1,9 +1,13 @@
 .header-homepage {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../images/header-background.jpg") center center fixed no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../images/header-background.jpg") center center no-repeat;
   background-size: cover;
   color: $snow;
   width: 100vw;
   height: 90vh;
+
+  @media screen and (min-width:768px) {
+    background-attachment: fixed;
+  }
 
   h1, h2, h3 {
     clear: both;
@@ -159,15 +163,23 @@
 }
 
 .bg-image {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../images/bg-image3.jpg") center center fixed no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url("../images/bg-image3.jpg") center center no-repeat;
   background-size: cover;
   color: $snow;
   width: 100vw;
+
+  @media screen and (min-width:768px) {
+    background-attachment: fixed;
+  }
 }
 
 .bg-image2 {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../images/bg-image2.jpg") center center fixed no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url("../images/bg-image2.jpg") center center no-repeat;
   background-size: cover;
   color: $snow;
   width: 100vw;
+
+  @media screen and (min-width:768px) {
+    background-attachment: fixed;
+  }
 }
