--- a/assets/scss/pages/_classes.scss
+++ b/assets/scss/pages/_classes.scss
@@ -12,7 +12,7 @@
   }
 
   h2 {
-    padding: 1em .5em 1em .5em;
+    padding: 1em 0 1em 0;
     font-size: 1.5em;
   }
 }
@@ -62,7 +62,7 @@
 
   h3 {
     font-size: 1.3em;
-    padding-top: 1em;
+    padding: 1em .5em 0 .5em;
   }
 }
 
