aligned store section to middle on mobile screens

--- a/assets/scss/pages/_store.scss
+++ b/assets/scss/pages/_store.scss
@@ -6,6 +6,10 @@
     border-bottom: 2px solid $tomato;
     padding-bottom: .5em;
   }
+
+  @media screen and (max-width:675px) {
+    text-align: center;
+  }
 }
 
 .store-section {
