--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -476,6 +476,9 @@ footer {
   .store h1 {
     border-bottom: 2px solid #c0392b;
     padding-bottom: .5em; }
+  @media screen and (max-width: 675px) {
+    .store {
+      text-align: center; } }
 
 .store-section h3 {
   margin-top: 3em;
