added spain, denmark, removed david koos

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -449,6 +449,9 @@ footer {
 .london-title {
   padding-top: 3em; }
 
+.link-container {
+  padding-bottom: 20em; }
+
 .lineage {
   background-color: #DDD; }
   .lineage h1 {
